--- a/src/components/header/Header.module.css
+++ b/src/components/header/Header.module.css
@@ -1,7 +1,7 @@
 .Header {
     width: 100%;
-    height: 10vh;
-    padding: 4em 1em;
+    height: 80px;
+    padding: 1em;
 }
 
 .Nav {
@@ -28,6 +28,7 @@
     width: fit-content;
     height: fit-content;
     display: flex;
+    align-items: center;
     gap: 2rem;
 }
 
