--- a/src/index.css
+++ b/src/index.css
@@ -15,16 +15,15 @@ html {
 
 body {
     height: 100vh;
-    min-height: 100vh;
 }
 
 main {
     width: 100%;
-    height: 90vh;
+    height: calc(100vh - 80px);
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     gap: 3rem;
-    margin-top: 5em;
+    padding: 5rem 0;
 }
