--- a/src/components/task/Task.module.css
+++ b/src/components/task/Task.module.css
@@ -35,6 +35,12 @@
     font-size: 1.2rem;
 }
 
+@media screen and (max-width: 600px) {
+    .Task_Title {
+        width: 80%;
+    }
+}
+
 .Delete {
     all: unset;
     font-size: 1.2rem;
